Fix flaky SitePerProcessHitTestDataGenerationTest

This patch attempts to fix the flaky content browsertest. The suspected
reason of the test being flaky is that the subframe content is not fully
loaded and processed when hit test data is collected. This patch force
the test to wait until all subframes receive their hit test query entries,
and retrieve hit test data directly from root frame hit test query.

Bug: 869314
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: Iccace2dfd11b613cccf67a23cf5fc8552f31544d
Reviewed-on: https://chromium-review.googlesource.com/1161972
Reviewed-by: Jonathan Ross <jonross@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Reviewed-by: Robert Flack <flackr@chromium.org>
Commit-Queue: Xianda Sun <sunxd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582253}
Former-commit-id: ae52aa4fe615d1eb071b47542294732f4b344daa