content/public/test/hit_test_region_observer.h
@@ -56,7 +56,6 @@ class HitTestRegionObserver : public viz::HitTestRegionObserver {
 
   viz::FrameSinkId const frame_sink_id_;
   std::unique_ptr<base::RunLoop> run_loop_;
-  std::vector<viz::AggregatedHitTestRegion> hit_test_data_;
 
   DISALLOW_COPY_AND_ASSIGN(HitTestRegionObserver);
 };
